--- a/src/frontend/Cdb.Calculator.App/src/app/app.css
+++ b/src/frontend/Cdb.Calculator.App/src/app/app.css
@@ -30,7 +30,7 @@ label {
   margin-bottom: 0.25rem;
 }
 
-input[type="number"] {
+input[type="number"], input[type="text"] {
   padding: 0.75rem;
   border: 1px solid #ccc;
   border-radius: 4px;
